--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     },
     "prettier": {
         "printWidth": 80,
-        "semi": true,
-        "singleQuote": true,
-        "trailingComma": "es5"
+        "semi": false,
+        "singleQuote": false,
+        "trailingComma": "es5",
+        "bracketSpacing": false,
+        "jsxBracketSameLine": false,
+        "arrowParens": "avoid",
+        "endOfLine": "lf"
     },
     "name": "react-card-carousel-materialui",
     "author": "Abiram Natarajan",
@@ -69,7 +73,6 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.15.14",
         "@mui/material": "^5.15.14",
-        "@mui/styled-engine": "^5.15.14",
-        "@fontsource/open-sans": "^5.0.27"
+        "@mui/styled-engine": "^5.15.14"
     }
 }
